@@ -67,5 +67,8 @@ config.kInfobarTypeAttr = 'data-infobar-type';
 
 var kTenMinutesInMilliseconds = 10 * 60 * 1000;
 config.kUpdateFrequency = kTenMinutesInMilliseconds;
+config.kRelativeTimeUpdateFrequency = 1000;
+
+
 
 })();
