@@ -1,3 +1,14 @@
+2011-08-22  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        garden-o-matic's relative time display should be updated regularly.
+        https://bugs.webkit.org/show_bug.cgi?id=66682
+
+        Reviewed by Adam Barth.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui.js: Moved Time to ui.Time, added code for regular updates.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications.js: Changed to use ui.Time.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui_unittests.js: Added tests.
+
 2011-08-22  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         Pass --makeargs of build-webkit to chromium linux builder
